--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -153,7 +153,7 @@ jobs:
     - name: Package Armvirt as OpenWrt
       uses: unifreq/openwrt_packit@master
       env:
-        OPENWRT_ARMVIRT: openwrt/bin/targets/*/*/*.tar.gz
+        OPENWRT_ARMVIRT: https://github.com/immortalwrt/immortalwrt/archive/refs/tags/v23.05.4.tar.gz
         PACKAGE_SOC: s905d_s905x3_beikeyun
         KERNEL_VERSION_NAME: 5.13.2_5.4.132
 
