--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -150,12 +150,12 @@ jobs:
         retain_days: 0
         keep_minimum_runs: 2
 
-    - name: Package Armvirt as OpenWrt
-      uses: unifreq/openwrt_packit@master
-      env:
-        OPENWRT_ARMVIRT: https://github.com/immortalwrt/immortalwrt/archive/refs/tags/v23.05.4.tar.gz
-        PACKAGE_SOC: s905d_s905x3_beikeyun
-        KERNEL_VERSION_NAME: 5.13.2_5.4.132
+    #- name: Package Armvirt as OpenWrt
+    #  uses: unifreq/openwrt_packit@master
+    #  env:
+    #    OPENWRT_ARMVIRT: https://github.com/immortalwrt/immortalwrt/archive/refs/tags/v23.05.4.tar.gz
+    #    PACKAGE_SOC: s905d_s905x3_beikeyun
+    #    KERNEL_VERSION_NAME: 5.13.2_5.4.132
 
     - name: Remove old Releases
       uses: dev-drprasad/delete-older-releases@master
